fix: page content now centered on the screen

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Library</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
 </head>
 <body>
-
+    <div class="page_wrapper">
     <header class="header">
                 <div class="container">
                 <div class="wrapper_headline_nav-list">
@@ -300,6 +300,7 @@
         <div class="github-link"><a href="https://github.com/YehorTelehaQA?tab=repositories">YehorTelehaQA</a></div>
     </div>
 </footer>
+</div>
 <script>
     console.log("Баллы за работу: 96")
 </script>
