feat: add header for tablets

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 <div class="wrapper_icon">
                     <div class="icon_profile"><img src="./assets/icon_profile.png" alt="Profile Icon"></div>
                 </div>
+                <div class="burger-icon">
+                    <img src="./assets/burger_mobile.png" alt="Burger Menu">
+                </div>
             </div>
     </header>
     <main class="main">
