feat:optimize about,favourites, coffee shop and your contacts for tablets

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div class="icon_profile"><img src="./assets/icon_profile.png" alt="Profile Icon"></div>
                 </div>
                 <div class="burger-icon">
-                    <img src="./assets/burger_mobile.png" alt="Burger Menu">
+                    <img src="./assets/mobile/burger_mobile.png" alt="Burger Menu">
                 </div>
             </div>
     </header>
@@ -43,7 +43,9 @@
            </div>
            <div class="about-text">The Brooklyn Library is a free workspace, a large number of books and a cozy coffee shop inside</div>
            <div class="about_images_wrapper">
+            <div class="arrow_left-mobile"><img src="./assets/mobile/Carret_Left.png" alt="Arrow_Left"></div>
             <div class="icon_profile"><img src="./assets/image1_about.png" alt="Girl in Library"></div>
+            <div class="arrow_rigth-mobile"><img src="./assets/mobile/Carret_Right.png" alt="Arrow_Rigth"></div>
             <div class="icon_profile"><img src="./assets/image2_about.png" alt="Profile Icon"></div>
             <div class="icon_profile"><img src="./assets/image3_about.png" alt="Profile Icon"></div>
            </div>
@@ -55,6 +57,12 @@
             <div class="slide_pagination"></div>
         </div>
         <div class="square_click-zone">
+            <div class="slide_pagination"></div>
+        </div>
+        <div class="square_click-zone-mobile">
+            <div class="slide_pagination"></div>
+        </div>
+        <div class="square_click-zone-mobile">
             <div class="slide_pagination"></div>
         </div>
            </a>
